--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  state_set: ^4.0.0
+
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices.
