--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
 
   state_set: ^4.0.0
 
+  # https://pub.dev/packages/ui_widgets_utils
+  ui_widgets_utils:
+    path: ../
+
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices.
